migration from overleaf

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -1174,4 +1174,30 @@ keywords = {metamorphic relation, test case generation, Metamorphic testing, ora
   timestamp = {Wed, 17 May 2017 10:56:36 +0200},
 }
 
+@Article{Politano20,
+  author    = {M. Politano and V. Bengolea and F. Molina and N. Aguirre and M. F. Frias and P. Ponzio},
+  title     = {Efficient Bounded Exhaustive Input Generation from Program APIs},
+  journal   = {Paper's Website},
+  year      = {2020},
+  note      = {Available at: \url{https://sites.google.com/view/bounded-exhaustive-api}},
+  bibsource = {Google Scholar},
+  timestamp = {Wed, 17 May 2017 10:56:36 +0200},
+}
+
+@book{jackson2006,
+  title={Software Abstractions: Logic, Language, and Analysis},
+  author={Jackson, Daniel},
+  year={2006},
+  publisher={MIT Press},
+  isbn={9780262025727},
+}
+
+@inproceedings{galeotti2020,
+  title={TACO: Efficient SAT-Based Bounded Verification and Abstraction},
+  author={Galeotti, Fabio and Rosner, S.},
+  year={2020},
+  booktitle={Proceedings of the 2020 Conference on Formal Methods in Computer-Aided Design (FMCAD)},
+  publisher={IEEE},
+}
 @Comment{jabref-meta: databaseType:bibtex;}
+
