--- a/evaluacion.tex
+++ b/evaluacion.tex
@@ -77,7 +77,8 @@ Los mejores valores que hemos obtenido para nuestros problemas son los siguiente
 Para realizar la evaluación de la técnica de identificación de métodos \emph{builders}, cada resultado que se muestra en la siguiente sección corresponde a la ejecución del algoritmo 5 veces para cada función de valoración con los parámetros mencionados anteriormente. Luego de estas evaluaciones, se calcula el promedio de los datos obtenidos.
 Vale aclarar que para la función de valoración que utiliza el generador exhaustivo, no hace falta ejecutarlo diferentes veces, debido a que este resultado es determinístico si se utiliza los mismos parámetros.
 
-
+\cacho{ya esta en el capitulo, lo movi para alla
+}
 Para implementar el algoritmo genético, utilizamos una biblioteca muy popular en Java llamada \emph{Jenetics}\footnote{https://jenetics.io/}. Esta biblioteca está diseñada específicamente para algoritmos evolutivos y nos proporcionó las herramientas necesarias para desarrollar nuestro enfoque genético.
 
 \emph{Jenetics} es una biblioteca robusta y versátil que ofrece una amplia gama de funcionalidades para la implementación de algoritmos genéticos. Nos permitió definir y manipular genes, cromosomas y poblaciones, así como utilizar operadores genéticos como selección, cruzamiento y mutación. Además, cuenta con un sólido conjunto de herramientas de optimización y técnicas de evolución que nos permitieron adaptar el algoritmo a nuestras necesidades específicas.
