--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,8 @@
 %\documentclass[10pt]{report} %twoside para impresion final 
-\documentclass[12pt,a4paper,openany]{report} %a4paper,
+%\documentclass[12pt,a4paper,openany]{report} %a4paper,
+
+\documentclass[a4paper, 12pt]{report}
+
 \usepackage[spanish,es-tabla]{babel}
 
 \makeatletter
@@ -176,9 +179,11 @@
 
 \include{preliminaries}
 
+\include{builders}
+
 \include{beapi}
 
-\include{builders}
+
 
 
 \include{evaluacion}
