--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -61,7 +61,7 @@
 \hline
 \end{tabular}
 
-\caption{Tabla de casos de estudio y efectividad de encontra el subconjunto optimo}
+\caption{Tabla de casos de estudio y efectividad de encontrar el subconjunto óptimo}
 \label{tab:efectividad}
 \end{table}
 
