Fixed some references

--- a/builders.tex
+++ b/builders.tex
@@ -285,7 +285,6 @@ public class NodeCachingLinkedList {
         return size; 
     }
     
-    // ... código omitido ...
 }
 \end{lstlisting}
 
@@ -385,7 +384,7 @@ Por ejemplo, un estado posible puede representarse como un vector de la siguient
   \centering
   \includegraphics[width=1.0\textwidth]{images/cromosoma.png}
   \caption{Ejemplo de representacion de estado con un vector booleano}
-  \label{fig:crossover}
+  \label{fig:cromosoma}
 \end{figure}
 
 En este caso, las posiciones 0, 6 y 16 del vector están establecidas como verdaderas (según el orden asignado a los métodos de la API), mientras que las demás posiciones están establecidas como falsas. Esta configuración representa el subconjuto de métodos:
